--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </p>
 
 <p>
-    <br>Y aún cuando los problemas parecieran no tener salida, estaría dispuesto a recorrer todos los caminos posibles, como en los laberintos de <strong>Maze Runner</strong>, si al final de ellos existe la posibilidad de enfrentar los desafíos con <em>paciencia y amor</em>.
+    <br>Y aún cuando los problemas parecieran no tener salida, estaría dispuesto a recorrer todos los caminos posibles, como en los laberintos de <strong>Maze Runner</strong>, si al final de ellos existe la posibilidad de enfrentar y sobrellevar los desafíos <em>juntos</em>.
 </p>
 
 <p>
@@ -43,7 +43,7 @@
 </p>
 
 <p>
-    <br>Al final del día, solo deseo que podamos acercarnos más a <strong>Dios</strong> y, bajo Su mirada, encontrar una forma sincera de ser felices.
+    <br>Al final del día, solo deseo que podamos acercarnos más a <strong>Dios</strong> y, bajo Su mirada, poder encontrar una forma sincera de ser felices.
 </p>
 
 <hr style="border: 0; border-top: 1px solid #eee; margin: 20px 0;">
